--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   mongo:
     image: mongo
     container_name: shorturldb
+    restart: always
     ports:
       - "27017:27017"
     environment:
@@ -14,11 +15,11 @@ services:
   mongo-express:
     image: mongo-express
     container_name: shorturldb-express
+    restart: always
     ports:
-      - "8881:8081"
+      - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: p@ssw0rd!
+      ME_CONFIG_MONGODB_URL: mongodb://root:p%40ssw0rd!@mongo
       ME_CONFIG_BASICAUTH_USERNAME: dbadmin
       ME_CONFIG_BASICAUTH_PASSWORD: p@ssw0rd!
 
