--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: mongo-express
     container_name: shorturldb-express
     restart: always
+    depends_on: mongo
     ports:
       - "8081:8081"
     environment:
@@ -26,6 +27,7 @@ services:
   short-url:
     image: short-url
     container_name: shorturl
+    depends_on: mongo
     ports:
       - "8800:8800"
     environment:
